# mrmr

./: .dir-locals.el  .gitignore  CHANGELOG.md  LICENSE  mrmr.cabal
app/: Main.hs  Network.hs  Types.hs  UiKit.hs
src/: Network.hs  Parse.hs  Types.hs  UiKit.hs
test/unit/MrMr/: NetworkSpec.hs  ParseSpec.hs
