cabal-version:      2.4
name:               mrmr
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Dmitry Suzdalev
maintainer:         mail@dimsuz.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library mrmr-lib
    exposed-modules:
        Parse, UiKit, Types, Network

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , monomer >= 1.5.0.0
                    , lens
                    , text
                    , text-show
                    , data-default
                    , wreq
                    , aeson
                    , path
                    , megaparsec
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:

executable mrmr
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , monomer >= 1.5.0.0
                    , lens
                    , text
                    , text-show
                    , data-default
                    , wreq
                    , aeson
                    , path
                    , mrmr-lib
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options: -threaded

test-suite mrmr-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:  MrMr.ParseSpec
    hs-source-dirs:
         test/unit
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
    build-depends: base ^>=4.16.3.0
                 , hspec
                 , text
                 , text-show
                 , QuickCheck
                 , quickcheck-instances
                 , mrmr-lib
    build-tool-depends: hspec-discover:hspec-discover == 2.*